--- a/app/src/main/res/layout/item_coin_info.xml
+++ b/app/src/main/res/layout/item_coin_info.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="btc"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold"
@@ -30,7 +30,7 @@
             android:id="@+id/tv_coin_prise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="7000"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="55sp"
             android:textStyle="bold"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Last update:12.0000"
+            android:text=""
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
