add layers data,domain,presentation. correction app

--- a/app/src/main/res/layout/fragment_detal_info_coin.xml
+++ b/app/src/main/res/layout/fragment_detal_info_coin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkula"
-    tools:context=".fragments.DetalInfoCoinFragment">
+    tools:context=".presentation.fragments.DetalInfoCoinFragment">
 
     <ImageView
         android:id="@+id/ivLogoCoin"
