--- a/app/src/main/res/layout/fragment_detal_info_coin.xml
+++ b/app/src/main/res/layout/fragment_detal_info_coin.xml
@@ -60,6 +60,8 @@
         android:layout_margin="8dp"
         app:cardCornerRadius="16dp"
         app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvSlash">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -233,4 +235,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/bar_chart"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
